--- a/service.html
+++ b/service.html
@@ -36,7 +36,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
-         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!--// bootstrap -->
 </head>
@@ -126,7 +126,7 @@
                             <img src="/img/services/3D Animation.png" alt="">
                             <figcaption>
                                 <div class="list">
-                                     <p>Lorem ipsum dolor sit amet</p>
+                                    <p>Lorem ipsum dolor sit amet</p>
                                     <p>Lorem ipsum dolor sit amet</p>
                                     <p>Lorem ipsum dolor sit amet</p>
                                 </div>
@@ -168,7 +168,7 @@
                             <img src="/img/services/Character Design & Rigging.png" alt="">
                             <figcaption>
                                 <div class="list">
-                                     <p>Lorem ipsum dolor sit amet</p>
+                                    <p>Lorem ipsum dolor sit amet</p>
                                     <p>Lorem ipsum dolor sit amet</p>
                                     <p>Lorem ipsum dolor sit amet</p>
                                 </div>
@@ -189,7 +189,7 @@
                                 alt="">
                             <figcaption>
                                 <div class="list">
-                                     <p>Lorem ipsum dolor sit amet</p>
+                                    <p>Lorem ipsum dolor sit amet</p>
                                     <p>Lorem ipsum dolor sit amet</p>
                                     <p>Lorem ipsum dolor sit amet</p>
                                 </div>
@@ -209,7 +209,7 @@
                             <img src="/img/services/Motion Graphics.png" alt="">
                             <figcaption>
                                 <div class="list">
-                                     <p>Lorem ipsum dolor sit amet</p>
+                                    <p>Lorem ipsum dolor sit amet</p>
                                     <p>Lorem ipsum dolor sit amet</p>
                                     <p>Lorem ipsum dolor sit amet</p>
                                 </div>
@@ -229,7 +229,7 @@
                             <img src="/img/services/red machine Product Animation.png" alt="">
                             <figcaption>
                                 <div class="list">
-                                     <p>Lorem ipsum dolor sit amet</p>
+                                    <p>Lorem ipsum dolor sit amet</p>
                                     <p>Lorem ipsum dolor sit amet</p>
                                     <p>Lorem ipsum dolor sit amet</p>
                                 </div>
@@ -249,7 +249,7 @@
                             <img src="/img/services/Storyboarding & Pre-Production.png" alt="">
                             <figcaption>
                                 <div class="list">
-                                     <p>Lorem ipsum dolor sit amet</p>
+                                    <p>Lorem ipsum dolor sit amet</p>
                                     <p>Lorem ipsum dolor sit amet</p>
                                     <p>Lorem ipsum dolor sit amet</p>
                                 </div>
@@ -269,7 +269,7 @@
                             <img src="/img/services/VFX & Post Production.png" alt="">
                             <figcaption>
                                 <div class="list">
-                                     <p>Lorem ipsum dolor sit amet</p>
+                                    <p>Lorem ipsum dolor sit amet</p>
                                     <p>Lorem ipsum dolor sit amet</p>
                                     <p>Lorem ipsum dolor sit amet</p>
                                 </div>
@@ -407,7 +407,7 @@
         ===================== -->
 
 
-         <!-- ENQUIRY SECTION START -->
+    <!-- ENQUIRY SECTION START -->
 
     <section class="enquiry-area">
         <div class="enquire-bg">
@@ -553,6 +553,17 @@
     <!-- ==========================
             SCRIPT SECTION START
         ========================== -->
+    <!-- modal -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+    <!-- modal -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
     <script defer type="text/javascript"
@@ -560,10 +571,8 @@
     <!-- modal -->
     <script defer type="text/javascript"
         src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-   
+
+
     <!-- modal -->
 
     <!-- Counter -->
