--- a/blogs.html
+++ b/blogs.html
@@ -39,7 +39,7 @@
 
     <!-- BLOGS SECTION START -->
 
-    <section class="blogs-area">
+    <section class="blogs-main-area">
         <div class="container">
             <h2>Blogs</h2>
             <div class="row grid">
