--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <!-- Favicon -->
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!--// bootstrap -->
 
 
@@ -604,11 +604,15 @@
     <!-- =====================
   FAQ SECTION END
   ===================== -->
-  
+
     <!-- LATEST BLOGS SECTION START -->
     <section class="blogs-area">
         <div class="container">
-            <h2>Blogs</h2>
+            <div class="head">
+                <h6>Blogs</h6>
+                <h2>Our Latest News</h2>
+            </div>
+
             <div class="row grid">
                 <div class="col-xl-4 col-lg-6 col-md-12 col-12">
                     <div class="contents">
@@ -622,11 +626,13 @@
                                 <a href="#">View more</a>
                             </figcaption>
                         </figure>
-                        <h6>Blog title</h6>
-                        <div class="special-btn-box btn">
-                            <a href="">LEARN MORE</a>
-
+                        <div class="caption">
+                            <h6>popular </h6>
+                            <p>feb 19, 2025</p>
                         </div>
+                        <p>Lorem, ipsum dolor sit amet consectetur </p>
+                        <a href="">Read More</a>
+
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-6 col-md-12 col-12">
@@ -641,11 +647,13 @@
                                 <a href="#">View more</a>
                             </figcaption>
                         </figure>
-                        <h6>Blog title</h6>
-                        <div class="special-btn-box btn">
-                            <a href="">LEARN MORE</a>
-
+                        <div class="caption">
+                            <h6>popular </h6>
+                            <p>feb 19, 2025</p>
                         </div>
+                        <p>Lorem, ipsum dolor sit amet consectetur </p>
+                        <a href="">Read More</a>
+
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-6 col-md-12 col-12">
@@ -660,18 +668,21 @@
                                 <a href="#">View more</a>
                             </figcaption>
                         </figure>
-                        <h6>Blog title</h6>
-                        <div class="special-btn-box btn">
-                            <a href="">LEARN MORE</a>
-
+                        <div class="caption">
+                            <h6>popular </h6>
+                            <p>feb 19, 2025</p>
                         </div>
+                        <p>Lorem, ipsum dolor sit amet consectetur</p>
+                        <a href="">Read More</a>
                     </div>
                 </div>
 
-
-
+            </div>
+            <div class="special-btn-box btn">
+                <a href="">LEARN MORE</a>
 
             </div>
+
         </div>
     </section>
     <!-- LATEST BLOGS SECTION END -->
@@ -829,8 +840,8 @@
         crossorigin="anonymous"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        crossorigin="anonymous"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script> -->
     <!-- modal -->
