--- a/blogs.html
+++ b/blogs.html
@@ -46,6 +46,121 @@
                 <div class="col-xl-6 col-lg-6 col-md-12 col-12">
                     <div class="contents">
                         <figure class="effect-lily">
+                            <img src="/img/blogs/blog2.png" alt="img12" />
+                            <figcaption>
+                                <div class="lists">
+                                    <!-- <h2>Nice <span>Lily</span></h2> -->
+                                    <p>BLOG NAME</p>
+                                </div>
+                                <a href="#">View more</a>
+                            </figcaption>
+                        </figure>
+                        <h4>Blog title</h4>
+                        <div class="special-btn-box btn">
+                            <a href="">LEARN MORE</a>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-12 col-12">
+                    <div class="contents">
+                        <figure class="effect-lily">
+                            <img src="/img/blogs/blog6.png" alt="img12" />
+                            <figcaption>
+                                <div class="lists">
+                                    <!-- <h2>Nice <span>Lily</span></h2> -->
+                                    <p>BLOG NAME</p>
+                                </div>
+                                <a href="#">View more</a>
+                            </figcaption>
+                        </figure>
+                        <h4>Blog title</h4>
+                        <div class="special-btn-box btn">
+                            <a href="">LEARN MORE</a>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-12 col-12">
+                    <div class="contents">
+                        <figure class="effect-lily">
+                            <img src="/img/blogs/blog7.png" alt="img12" />
+                            <figcaption>
+                                <div class="lists">
+                                    <!-- <h2>Nice <span>Lily</span></h2> -->
+                                    <p>BLOG NAME</p>
+                                </div>
+                                <a href="#">View more</a>
+                            </figcaption>
+                        </figure>
+                        <h4>Blog title</h4>
+                        <div class="special-btn-box btn">
+                            <a href="">LEARN MORE</a>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-12 col-12">
+                    <div class="contents">
+                        <figure class="effect-lily">
+                            <img src="/img/blogs/blog3.png"
+                                alt="img12" />
+                            <figcaption>
+                                <div class="lists">
+                                    <!-- <h2>Nice <span>Lily</span></h2> -->
+                                    <p>BLOG NAME</p>
+                                </div>
+                                <a href="#">View more</a>
+                            </figcaption>
+                        </figure>
+                        <h4>Blog title</h4>
+                        <div class="special-btn-box btn">
+                            <a href="">LEARN MORE</a>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-12 col-12">
+                    <div class="contents">
+                        <figure class="effect-lily">
+                            <img src="/img/blogs/blog1.png" alt="img12" />
+                            <figcaption>
+                                <div class="lists">
+                                    <!-- <h2>Nice <span>Lily</span></h2> -->
+                                    <p>BLOG NAME</p>
+                                </div>
+                                <a href="#">View more</a>
+                            </figcaption>
+                        </figure>
+                        <h4>Blog title</h4>
+                        <div class="special-btn-box btn">
+                            <a href="">LEARN MORE</a>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-12 col-12">
+                    <div class="contents">
+                        <figure class="effect-lily">
+                            <img src="/img/blogs/blog5.png" alt="img12" />
+                            <figcaption>
+                                <div class="lists">
+                                    <!-- <h2>Nice <span>Lily</span></h2> -->
+                                    <p>BLOG NAME</p>
+                                </div>
+                                <a href="#">View more</a>
+                            </figcaption>
+                        </figure>
+                        <h4>Blog title</h4>
+                        <div class="special-btn-box btn">
+                            <a href="">LEARN MORE</a>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-12 col-12">
+                    <div class="contents">
+                        <figure class="effect-lily">
                             <img src="/img/blogs/2D Animation.png" alt="img12" />
                             <figcaption>
                                 <div class="lists">
@@ -84,7 +199,7 @@
                 <div class="col-xl-6 col-lg-6 col-md-12 col-12">
                     <div class="contents">
                         <figure class="effect-lily">
-                            <img src="/img/blogs/Character Design & Rigging.png" alt="img12" />
+                            <img src="/img/blogs/blog5.png" alt="img12" />
                             <figcaption>
                                 <div class="lists">
                                     <!-- <h2>Nice <span>Lily</span></h2> -->
@@ -103,122 +218,7 @@
                 <div class="col-xl-6 col-lg-6 col-md-12 col-12">
                     <div class="contents">
                         <figure class="effect-lily">
-                            <img src="/img/blogs/Comic book style image_ a man working on a laptop while siting on a wooden chair.png"
-                                alt="img12" />
-                            <figcaption>
-                                <div class="lists">
-                                    <!-- <h2>Nice <span>Lily</span></h2> -->
-                                    <p>BLOG NAME</p>
-                                </div>
-                                <a href="#">View more</a>
-                            </figcaption>
-                        </figure>
-                        <h4>Blog title</h4>
-                        <div class="special-btn-box btn">
-                            <a href="">LEARN MORE</a>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-6 col-lg-6 col-md-12 col-12">
-                    <div class="contents">
-                        <figure class="effect-lily">
-                            <img src="/img/blogs/red machine Product Animation.png" alt="img12" />
-                            <figcaption>
-                                <div class="lists">
-                                    <!-- <h2>Nice <span>Lily</span></h2> -->
-                                    <p>BLOG NAME</p>
-                                </div>
-                                <a href="#">View more</a>
-                            </figcaption>
-                        </figure>
-                        <h4>Blog title</h4>
-                        <div class="special-btn-box btn">
-                            <a href="">LEARN MORE</a>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-6 col-lg-6 col-md-12 col-12">
-                    <div class="contents">
-                        <figure class="effect-lily">
-                            <img src="/img/blogs/Motion Graphics.png" alt="img12" />
-                            <figcaption>
-                                <div class="lists">
-                                    <!-- <h2>Nice <span>Lily</span></h2> -->
-                                    <p>BLOG NAME</p>
-                                </div>
-                                <a href="#">View more</a>
-                            </figcaption>
-                        </figure>
-                        <h4>Blog title</h4>
-                        <div class="special-btn-box btn">
-                            <a href="">LEARN MORE</a>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-6 col-lg-6 col-md-12 col-12">
-                    <div class="contents">
-                        <figure class="effect-lily">
-                            <img src="/img/blogs/Storyboarding & Pre-Production.png" alt="img12" />
-                            <figcaption>
-                                <div class="lists">
-                                    <!-- <h2>Nice <span>Lily</span></h2> -->
-                                    <p>BLOG NAME</p>
-                                </div>
-                                <a href="#">View more</a>
-                            </figcaption>
-                        </figure>
-                        <h4>Blog title</h4>
-                        <div class="special-btn-box btn">
-                            <a href="">LEARN MORE</a>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-6 col-lg-6 col-md-12 col-12">
-                    <div class="contents">
-                        <figure class="effect-lily">
-                            <img src="/img/blogs/VFX & Post Production.png" alt="img12" />
-                            <figcaption>
-                                <div class="lists">
-                                    <!-- <h2>Nice <span>Lily</span></h2> -->
-                                    <p>BLOG NAME</p>
-                                </div>
-                                <a href="#">View more</a>
-                            </figcaption>
-                        </figure>
-                        <h4>Blog title</h4>
-                        <div class="special-btn-box btn">
-                            <a href="">LEARN MORE</a>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-6 col-lg-6 col-md-12 col-12">
-                    <div class="contents">
-                        <figure class="effect-lily">
-                            <img src="/img/blogs/Video Editing & Post Production.png" alt="img12" />
-                            <figcaption>
-                                <div class="lists">
-                                    <!-- <h2>Nice <span>Lily</span></h2> -->
-                                    <p>BLOG NAME</p>
-                                </div>
-                                <a href="#">View more</a>
-                            </figcaption>
-                        </figure>
-                        <h4>Blog title</h4>
-                        <div class="special-btn-box btn">
-                            <a href="">LEARN MORE</a>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-6 col-lg-6 col-md-12 col-12">
-                    <div class="contents">
-                        <figure class="effect-lily">
-                            <img src="/img/blogs/Whiteboard Animation.png" alt="img12" />
+                            <img src="/img/blogs/3D Animation.png" alt="img12" />
                             <figcaption>
                                 <div class="lists">
                                     <!-- <h2>Nice <span>Lily</span></h2> -->
@@ -240,7 +240,77 @@
 
     <!-- BLOGS SECTION END -->
 
+ <!-- ======================
+      FOOTER SECTION START
+      ================== -->
 
+    <section class="footer-area">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-xl-4 col-lg-4 col-md-3 col-12">
+                    <div class="bigleap">
+                        <img src="/img/footer/logo-footer 1.png" alt="">
+                    </div>
+                </div>
+                <div class="col-xl-8 col-lg-8 col-md-9 col-12">
+                    <div class="content">
+                        <div class="bigleap-cnt">
+                            <h2>Let's Starts from a 'Hi'</h2>
+                        </div>
+                        <div class="row">
+                            <div class="col-xl-3 col-lg-4 col-md-4 col-6">
+                                <div class="sub-col">
+                                    <h5>Socials</h5>
+                                    <ul>
+                                        <li><a href="">facebook</a></li>
+                                        <li><a href="">instagram</a></li>
+                                        <li><a href="">linkedin</a></li>
+                                        <li><a href="">youtube</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-xl-3 col-lg-4 col-md-4 col-6">
+                                <div class="sub-col">
+                                    <h5>Menu</h5>
+                                    <ul>
+                                        <li><a href="">Service</a></li>
+                                        <li><a href="">Portfolio</a></li>
+                                        <li><a href="">About Us</a></li>
+                                        <li><a href="">Blogs</a></li>
+                                        <li><a href="">Contact</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-xl-3 col-lg-4 col-md-4 col-6">
+                                <div class="sub-col">
+                                    <h5>Say Hello</h5>
+                                    <ul>
+                                        <li><a href="">info@giraf.in</a></li>
+
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- </div> -->
+                    </div>
+                </div>
+
+                <div class="col-xl-12">
+                    <div class="footer-bottom">
+                        <ul class="footer-copy-right">
+                            <li> Bigleap © 2025. All Rights Reserved. <a href="https://www.bigleap.ae/"> bigleap.ae </a>
+                            </li>
+                            <li> <a href="#"> Privacy Policy </a> </li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- =====================
+       FOOTER SECTION END
+       ========================== -->
 
 
     <!-- ==========================
