--- a/portfolio.html
+++ b/portfolio.html
@@ -66,9 +66,14 @@
                                     <a href="">EXPLORE ALL</a>
                                 </div>
                             </div>
-                        </div>
 
+                        </div>
+                        <div class="image">
+                            <img src="/img/portfolio/comic.png" alt="">
+                        </div>
                     </div>
+
+
                     <div class="swiper-slide">
                         <div class="slider-bg-2">
                             <div class="content">
@@ -86,6 +91,9 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="image">
+                            <img src="/img/portfolio/comic.png" alt="">
+                        </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-bg-3">
@@ -101,6 +109,9 @@
                                     <a href="">EXPLORE ALL</a>
                                 </div>
                             </div>
+                        </div>
+                        <div class="image">
+                            <img src="/img/portfolio/comic.png" alt="">
                         </div>
 
                     </div>
