--- a/index.html
+++ b/index.html
@@ -36,21 +36,110 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!--// bootstrap -->
-
+    <!-- Nav -->
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+    <!-- Nav -->
 
 </head>
 
 <body>
     <!-- ==========================
+        HEADER SECTION START
+     ========================== -->
+    <section class="header-top-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-7 col-lg-6 col-md-12 col-12"></div>
+                <div class="col-xl-5 col-lg-6 col-md-12 col-12">
+                    <div class="head-top-contacts">
+                        <ul>
+                            <li> <a href="mailto:info@bigleap.ae"> <i class="fa fa-envelope"></i> info@bigleap.ae</a>
+                            </li>
+                            <li> <a href="tel:+123456789"> <i class="fa fa-phone"></i> +971 05 6646 464 </a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <header class="header">
+        <div class="container">
+            <nav>
+                <div class="navbar">
+
+                    <div class="logo">
+                        <a href="index.html">
+                            <img src="./img/logo.png" alt="logo">
+                        </a>
+                    </div>
+                    <i class='bx bx-menu'></i>
+                    <div class="nav-links">
+                        <div class="sidebar-logo">
+                            <span class="logo-name">
+                                <a href="index.html">
+                                    <img src="./img/logo.png" alt="logo">
+                                </a>
+                            </span>
+                            <i class='bx bx-x'></i>
+                        </div>
+                        <ul class="links">
+                            <!-- <li>
+                            <a href="#">HTML & CSS</a>
+                            <i class='bx bxs-chevron-down htmlcss-arrow arrow  '></i>
+                            <ul class="htmlCss-sub-menu sub-menu">
+                                <li><a href="#">Web Design</a></li>
+                                <li><a href="#">Login Forms</a></li>
+                                <li><a href="#">Card Design</a></li>
+                                <li class="more">
+                                    <span><a href="#">More</a>
+                                        <i class='bx bxs-chevron-right arrow more-arrow'></i>
+                                    </span>
+                                    <ul class="more-sub-menu sub-menu">
+                                        <li><a href="#">Neumorphism</a></li>
+                                        <li><a href="#">Pre-loader</a></li>
+                                        <li><a href="#">Glassmorphism</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">JAVASCRIPT</a>
+                            <i class='bx bxs-chevron-down js-arrow arrow '></i>
+                            <ul class="js-sub-menu sub-menu">
+                                <li><a href="#">Dynamic Clock</a></li>
+                                <li><a href="#">Form Validation</a></li>
+                                <li><a href="#">Card Slider</a></li>
+                                <li><a href="#">Complete Website</a></li>
+                            </ul>
+                        </li> -->
+                            <li><a href="#">HOME</a></li>
+                            <li><a href="#">ABOUT US</a></li>
+                            <li><a href="#">SERVICES</a></li>
+                            <li><a href="#">PORTFOLIO</a></li>
+                            <li><a href="#">BLOG</a></li>
+                            <li><a href="#">CONTACT US</a></li>
+                        </ul>
+                    </div>
+
+                </div>
+            </nav>
+        </div>
+    </header>
+    <!-- ==========================
+        HEADER SECTION END
+     ========================== -->
+
+    <!-- ==========================
         BANNER SECTION START
      ========================== -->
-    <!-- <section class="hero-area-start">
-        <div class="hero-video">
-            <video autoplay muted loop class="banner-video">
-                <source src="./videos/Banner.mp4" type="video/mp4">
-            </video>
+    <section class="hero-area-start">
+        <div class="hanging-images">
+            <img id="yeeha-img" src="img/animate/Yeeha.png" alt="">
+            <img id="img360" src="img/animate/360.png" alt="" style="display:none;">
+            <img id="character-img" src="img/animate/character.png" alt="Character Image">
         </div>
-    </section> -->
+    </section>
     <!-- ==========================
          BANNER SECTION END
      ========================== -->
@@ -863,6 +952,14 @@
     <script defer type="text/javascript" src="./js/clients.js"></script>
     <script defer type="text/javascript" src="./js/bigleap.js"></script>
     <!-- Counter -->
+
+    <!-- Animate -->
+    <script defer type="text/javascript" src="./js/animate.js"></script>
+    <!-- Animate -->
+    <!-- Nav -->
+    <script defer type="text/javascript" src="./js/nav.js"></script>
+    <!-- Nav -->
+    <script defer type="text/javascript" src="./js/stick.js"></script>
     <!-- ==========================
             SCRIPT SECTION END
         ========================== -->
