--- a/index.html
+++ b/index.html
@@ -33,12 +33,8 @@
     <!-- Favicon -->
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!--// bootstrap -->
-    <!-- Nav -->
-    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-    <!-- Nav -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
 </head>
 
@@ -73,7 +69,8 @@
                             <img src="./img/logo.png" alt="logo">
                         </a>
                     </div>
-                    <i class='bx bx-menu'></i>
+                    <!-- <i class='bx bx-menu'></i> -->
+                    <i class="fa-solid fa-bars bx bx-menu"></i>
                     <div class="nav-links">
                         <div class="sidebar-logo">
                             <span class="logo-name">
@@ -81,7 +78,8 @@
                                     <img src="./img/logo.png" alt="logo">
                                 </a>
                             </span>
-                            <i class='bx bx-x'></i>
+                            <!-- <i class='bx bx-x'></i> -->
+                            <i class="fa-solid fa-xmark bx bx-x"></i>
                         </div>
                         <ul class="links">
                             <!-- <li>
@@ -113,12 +111,12 @@
                                 <li><a href="#">Complete Website</a></li>
                             </ul>
                         </li> -->
-                            <li><a href="#">HOME</a></li>
-                            <li><a href="#">ABOUT US</a></li>
-                            <li><a href="#">SERVICES</a></li>
-                            <li><a href="#">PORTFOLIO</a></li>
-                            <li><a href="#">BLOG</a></li>
-                            <li><a href="#">CONTACT US</a></li>
+                            <li><a href="index.html">HOME</a></li>
+                            <li><a href="about.html">ABOUT US</a></li>
+                            <li><a href="service.html">SERVICES</a></li>
+                            <li><a href="portfolio.html">PORTFOLIO</a></li>
+                            <li><a href="blogs.html">BLOG</a></li>
+                            <li><a href="contacts.html">CONTACT US</a></li>
                         </ul>
                     </div>
 
@@ -934,15 +932,15 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
     <!-- modal -->
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
+    <!-- <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script> -->
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-    <script defer type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
+    <!-- <script defer type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script> -->
     <!-- modal -->
-    <script defer type="text/javascript"
-        src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+    <!-- <script defer type="text/javascript"
+        src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script> -->
     <!-- modal -->
 
     <!-- Counter -->
@@ -959,7 +957,9 @@
     <!-- Nav -->
     <script defer type="text/javascript" src="./js/nav.js"></script>
     <!-- Nav -->
+    <!-- Sticky -->
     <script defer type="text/javascript" src="./js/stick.js"></script>
+    <!-- Sticky -->
     <!-- ==========================
             SCRIPT SECTION END
         ========================== -->
