--- a/about.html
+++ b/about.html
@@ -34,10 +34,98 @@
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
     <!--// bootstrap -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 
 <body>
+    <!-- ==========================
+        HEADER SECTION START
+     ========================== -->
+    <section class="header-top-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-7 col-lg-6 col-md-12 col-12"></div>
+                <div class="col-xl-5 col-lg-6 col-md-12 col-12">
+                    <div class="head-top-contacts">
+                        <ul>
+                            <li> <a href="mailto:info@bigleap.ae"> <i class="fa fa-envelope"></i> info@bigleap.ae</a>
+                            </li>
+                            <li> <a href="tel:+123456789"> <i class="fa fa-phone"></i> +971 05 6646 464 </a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <header class="header">
+        <div class="container">
+            <nav>
+                <div class="navbar">
+
+                    <div class="logo">
+                        <a href="index.html">
+                            <img src="./img/logo.png" alt="logo">
+                        </a>
+                    </div>
+                    <!-- <i class='bx bx-menu'></i> -->
+                    <i class="fa-solid fa-bars bx bx-menu"></i>
+                    <div class="nav-links">
+                        <div class="sidebar-logo">
+                            <span class="logo-name">
+                                <a href="index.html">
+                                    <img src="./img/logo.png" alt="logo">
+                                </a>
+                            </span>
+                            <!-- <i class='bx bx-x'></i> -->
+                            <i class="fa-solid fa-xmark bx bx-x"></i>
+                        </div>
+                        <ul class="links">
+                            <!-- <li>
+                            <a href="#">HTML & CSS</a>
+                            <i class='bx bxs-chevron-down htmlcss-arrow arrow  '></i>
+                            <ul class="htmlCss-sub-menu sub-menu">
+                                <li><a href="#">Web Design</a></li>
+                                <li><a href="#">Login Forms</a></li>
+                                <li><a href="#">Card Design</a></li>
+                                <li class="more">
+                                    <span><a href="#">More</a>
+                                        <i class='bx bxs-chevron-right arrow more-arrow'></i>
+                                    </span>
+                                    <ul class="more-sub-menu sub-menu">
+                                        <li><a href="#">Neumorphism</a></li>
+                                        <li><a href="#">Pre-loader</a></li>
+                                        <li><a href="#">Glassmorphism</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">JAVASCRIPT</a>
+                            <i class='bx bxs-chevron-down js-arrow arrow '></i>
+                            <ul class="js-sub-menu sub-menu">
+                                <li><a href="#">Dynamic Clock</a></li>
+                                <li><a href="#">Form Validation</a></li>
+                                <li><a href="#">Card Slider</a></li>
+                                <li><a href="#">Complete Website</a></li>
+                            </ul>
+                        </li> -->
+                            <li><a href="index.html">HOME</a></li>
+                            <li><a href="about.html">ABOUT US</a></li>
+                            <li><a href="service.html">SERVICES</a></li>
+                            <li><a href="portfolio.html">PORTFOLIO</a></li>
+                            <li><a href="blogs.html">BLOG</a></li>
+                            <li><a href="contacts.html">CONTACT US</a></li>
+                        </ul>
+                    </div>
+
+                </div>
+            </nav>
+        </div>
+    </header>
+    <!-- ==========================
+        HEADER SECTION END
+     ========================== -->
 
     <!-- ===================
      ABOUT MAIN SECTION STRAT
@@ -194,7 +282,7 @@
 
                 </div>
                 <div class="col-xl-4 col-lg-6 col-md-12 col-12">
-                   <div class="content">
+                    <div class="content">
                         <figure class="effect-selena">
                             <img src="/img/about/team/basil.jpg" alt="img10" />
                             <figcaption>
@@ -333,7 +421,7 @@
     <!-- ===================
  FAQ SECTION START
  ===================== -->
-     <section class="faq-area">
+    <section class="faq-area">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-xl-4">
@@ -391,7 +479,7 @@
             </div>
 
         </div>
-    </section> 
+    </section>
     <!-- =====================
   FAQ SECTION END
   ===================== -->
@@ -538,6 +626,13 @@
     <script defer type="text/javascript" src="./js/instagram.js"></script>
     <script defer type="text/javascript" src="./js/history.js"></script>
     <!-- Counter -->
+
+    <!-- Nav -->
+    <script defer type="text/javascript" src="./js/nav.js"></script>
+    <!-- Nav -->
+    <!-- Sticky -->
+    <script defer type="text/javascript" src="./js/stick.js"></script>
+    <!-- Sticky -->
     <!-- ==========================
             SCRIPT SECTION END
         ========================== -->
