--- a/portfolio-detail.html
+++ b/portfolio-detail.html
@@ -36,12 +36,99 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!--// bootstrap -->
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
 </head>
 
 <body>
+    <!-- ==========================
+        HEADER SECTION START
+     ========================== -->
+    <section class="header-top-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-7 col-lg-6 col-md-12 col-12"></div>
+                <div class="col-xl-5 col-lg-6 col-md-12 col-12">
+                    <div class="head-top-contacts">
+                        <ul>
+                            <li> <a href="mailto:info@bigleap.ae"> <i class="fa fa-envelope"></i> info@bigleap.ae</a>
+                            </li>
+                            <li> <a href="tel:+123456789"> <i class="fa fa-phone"></i> +971 05 6646 464 </a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <header class="header">
+        <div class="container">
+            <nav>
+                <div class="navbar">
+
+                    <div class="logo">
+                        <a href="index.html">
+                            <img src="./img/logo.png" alt="logo">
+                        </a>
+                    </div>
+                    <!-- <i class='bx bx-menu'></i> -->
+                    <i class="fa-solid fa-bars bx bx-menu"></i>
+                    <div class="nav-links">
+                        <div class="sidebar-logo">
+                            <span class="logo-name">
+                                <a href="index.html">
+                                    <img src="./img/logo.png" alt="logo">
+                                </a>
+                            </span>
+                            <!-- <i class='bx bx-x'></i> -->
+                            <i class="fa-solid fa-xmark bx bx-x"></i>
+                        </div>
+                        <ul class="links">
+                            <!-- <li>
+                            <a href="#">HTML & CSS</a>
+                            <i class='bx bxs-chevron-down htmlcss-arrow arrow  '></i>
+                            <ul class="htmlCss-sub-menu sub-menu">
+                                <li><a href="#">Web Design</a></li>
+                                <li><a href="#">Login Forms</a></li>
+                                <li><a href="#">Card Design</a></li>
+                                <li class="more">
+                                    <span><a href="#">More</a>
+                                        <i class='bx bxs-chevron-right arrow more-arrow'></i>
+                                    </span>
+                                    <ul class="more-sub-menu sub-menu">
+                                        <li><a href="#">Neumorphism</a></li>
+                                        <li><a href="#">Pre-loader</a></li>
+                                        <li><a href="#">Glassmorphism</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">JAVASCRIPT</a>
+                            <i class='bx bxs-chevron-down js-arrow arrow '></i>
+                            <ul class="js-sub-menu sub-menu">
+                                <li><a href="#">Dynamic Clock</a></li>
+                                <li><a href="#">Form Validation</a></li>
+                                <li><a href="#">Card Slider</a></li>
+                                <li><a href="#">Complete Website</a></li>
+                            </ul>
+                        </li> -->
+                            <li><a href="index.html">HOME</a></li>
+                            <li><a href="about.html">ABOUT US</a></li>
+                            <li><a href="service.html">SERVICES</a></li>
+                            <li><a href="portfolio.html">PORTFOLIO</a></li>
+                            <li><a href="blogs.html">BLOG</a></li>
+                            <li><a href="contacts.html">CONTACT US</a></li>
+                        </ul>
+                    </div>
+
+                </div>
+            </nav>
+        </div>
+    </header>
+    <!-- ==========================
+        HEADER SECTION END
+     ========================== -->
 
     <!-- ===============
  PORTFOLIO HERO SECTION START
@@ -63,11 +150,11 @@
   LATEST PROJECTS SECTION START
   ====================== -->
     <section class="latest-projects">
-            <div class="stiky-text">
-                <p>Product Animations</p>
-                <h2>Check Our <br> latest project </h2>
-                <p>Take a look at what we've been crafting for our clients lately — from stunning websites to
-                    comprehensive branding solutions that deliver real results.</p>
+        <div class="stiky-text">
+            <p>Product Animations</p>
+            <h2>Check Our <br> latest project </h2>
+            <p>Take a look at what we've been crafting for our clients lately — from stunning websites to
+                comprehensive branding solutions that deliver real results.</p>
         </div>
 
 
@@ -384,10 +471,13 @@
     <script defer type="text/javascript" src="./js/bigleap.js"></script>
     <script defer type="text/javascript" src="./js/portfolio.js"></script>
     <script defer type="text/javascript" src="./js/portfo-project.js"></script>
-
-
-
     <!-- Counter -->
+    <!-- Nav -->
+    <script defer type="text/javascript" src="./js/nav.js"></script>
+    <!-- Nav -->
+    <!-- Sticky -->
+    <script defer type="text/javascript" src="./js/stick.js"></script>
+    <!-- Sticky -->
     <!-- ==========================
             SCRIPT SECTION END
         ========================== -->
