--- a/index.html
+++ b/index.html
@@ -376,6 +376,9 @@
                         <div class="content">
                             <h6>Key Projects</h6>
                             <h2>Lorem ipsum dolor sit amet </h2>
+                            <p>Take a deep dive into some of our favorite projects. From established corporations to
+                                startups gearing to launch, we’ve seen a lot of our partners win – and we're excited to
+                                see you thrive too.</p>
                         </div>
                         <div class="videos">
 
@@ -391,6 +394,9 @@
                         <div class="content">
                             <h6>Key Projects</h6>
                             <h2>Lorem ipsum dolor sit amet </h2>
+                            <p>Take a deep dive into some of our favorite projects. From established corporations to
+                                startups gearing to launch, we’ve seen a lot of our partners win – and we're excited to
+                                see you thrive too.</p>
                         </div>
                         <div class="videos">
 
@@ -404,7 +410,8 @@
                     </div>
 
                 </div>
-
+                <div class="swiper-button-next custom-arrow-btn"></div>
+                <div class="swiper-button-prev custom-arrow-btn"></div>
             </div>
         </div>
     </section>
@@ -706,69 +713,54 @@
                 <div class="col-xl-4 col-lg-6 col-md-12 col-12">
                     <div class="contents">
                         <figure class="effect-lily">
-                            <img src="/img/blogs/2D Animation.png" alt="img12" />
-                            <figcaption>
+                            <img src="/img/blogs/first-blog.png" alt="img12" />
+                            <!-- <figcaption>
                                 <div class="lists">
-                                    <!-- <h2>Nice <span>Lily</span></h2> -->
                                     <p>BLOG NAME</p>
                                 </div>
                                 <a href="#">View more</a>
-                            </figcaption>
+                            </figcaption> -->
                         </figure>
                         <div class="caption">
                             <h6>popular </h6>
                             <p>feb 19, 2025</p>
                         </div>
-                        <p>Lorem, ipsum dolor sit amet consectetur </p>
-                        <a href="">Read More</a>
+                        <h5>Lorem, ipsum dolor sit amet consectetur sit amet consectetur </h5>
+                        <a href="#">Read More</a>
 
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-6 col-md-12 col-12">
                     <div class="contents">
                         <figure class="effect-lily">
-                            <img src="/img/blogs/3D Animation.png" alt="img12" />
-                            <figcaption>
-                                <div class="lists">
-                                    <!-- <h2>Nice <span>Lily</span></h2> -->
-                                    <p>BLOG NAME</p>
-                                </div>
-                                <a href="#">View more</a>
-                            </figcaption>
+                            <img src="/img/blogs/secnd-blog.png" alt="img12" />
                         </figure>
                         <div class="caption">
                             <h6>popular </h6>
                             <p>feb 19, 2025</p>
                         </div>
-                        <p>Lorem, ipsum dolor sit amet consectetur </p>
-                        <a href="">Read More</a>
+                        <h5>Lorem, ipsum dolor sit amet consectetur sit amet consectetur </h5>
+                        <a href="#">Read More</a>
 
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-6 col-md-12 col-12">
                     <div class="contents">
                         <figure class="effect-lily">
-                            <img src="/img/blogs/blog5.png" alt="img12" />
-                            <figcaption>
-                                <div class="lists">
-                                    <!-- <h2>Nice <span>Lily</span></h2> -->
-                                    <p>BLOG NAME</p>
-                                </div>
-                                <a href="#">View more</a>
-                            </figcaption>
+                            <img src="/img/blogs/third-blog.png" alt="img12" />
                         </figure>
                         <div class="caption">
                             <h6>popular </h6>
                             <p>feb 19, 2025</p>
                         </div>
-                        <p>Lorem, ipsum dolor sit amet consectetur</p>
-                        <a href="">Read More</a>
+                        <h5>Lorem, ipsum dolor sit amet consectetur sit amet consectetur </h5>
+                        <a href="#">Read More</a>
                     </div>
                 </div>
 
             </div>
             <div class="special-btn-box btn">
-                <a href="">LEARN MORE</a>
+                <a href=""> View All</a>
 
             </div>
 
