--- a/about.html
+++ b/about.html
@@ -127,6 +127,18 @@
         HEADER SECTION END
      ========================== -->
 
+    <!-- ===============================
+            TITLE BANNER SECTION STRAT
+         =============================== -->
+    <section class="title-banner-area">
+        <h1> </h1>
+    </section>
+    <!-- =============================
+            TITLE BANNER SECTION END
+         ============================= -->
+
+
+
     <!-- ===================
      ABOUT MAIN SECTION STRAT
      ======================== -->
