--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
                             <div class="col-xl-6 col-lg-6 col-md-12 col-12 ">
                                 <div class="inputt">
                                     <form>
-                                        <input type="text" name="name" placeholder="Name">
+                                        <input type="text" name="name" placeholder="Your Name">
 
                                     </form>
                                 </div>
@@ -804,7 +804,7 @@
                             <div class="col-xl-6 col-lg-6 col-md-12 col-12 ">
                                 <div class="inputt">
                                     <form>
-                                        <input type="text" name="phone" placeholder="phone">
+                                        <input type="text" name="phone" placeholder="Your Phone">
 
                                     </form>
                                 </div>
@@ -812,7 +812,7 @@
                             <div class="col-xl-12 col-lg-12 col-md-12 col-12 ">
                                 <div class="inputt">
                                     <form>
-                                        <input type="email" name="email" placeholder="Email">
+                                        <input type="email" name="email" placeholder="Your Email">
 
                                     </form>
                                 </div>
@@ -828,8 +828,7 @@
                         </div>
                     </div>
                     <div class="modal-footer foot">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">DONE</button>
+                        <button type="button" class="btn"> <a> Submit </a> </button>
                     </div>
                 </div>
             </div>
@@ -942,6 +941,10 @@
     <!-- Sticky -->
     <script defer type="text/javascript" src="./js/stick.js"></script>
     <!-- Sticky -->
+
+    <!-- Smooth scroll -->
+    <!-- Smooth scroll -->
+
     <!-- ==========================
             SCRIPT SECTION END
          ========================== -->
