--- a/about.html
+++ b/about.html
@@ -56,6 +56,12 @@
                 </div>
             </div>
         </div>
+
+        <!-- Shape -->
+        <div class="shape">
+            <img src="/img/shapes/corner-left.png" alt="shapes">
+        </div>
+        <!-- Shape -->
     </section>
 
     <header class="header">
@@ -122,6 +128,8 @@
                 </div>
             </nav>
         </div>
+
+
     </header>
     <!-- ==========================
         HEADER SECTION END
@@ -131,7 +139,7 @@
             TITLE BANNER SECTION STRAT
          =============================== -->
     <section class="title-banner-area">
-        <h1> </h1>
+        <h1> Our creativity begins where reality ends </h1>
     </section>
     <!-- =============================
             TITLE BANNER SECTION END
