--- a/index.html
+++ b/index.html
@@ -840,9 +840,72 @@
     <!-- ENQUIRY SECTION END -->
 
 
-    <!-- ======================
-      FOOTER SECTION START
-      ================== -->
+    <!-- ============================
+           INSTAGRAM SECTION START
+         ============================ -->
+    <section class="instagram-area">
+        <div class="instagram-icon">
+            <img src="/img/instagram/camera.png" alt="" class="over-image">
+        </div>
+        <div class="special-slider">
+
+            <!-- Swiper -->
+            <div class="swiper instagram">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <img src="/img/instagram/image (2).jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/img/instagram/image (3).jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/img/instagram/image (4).jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/img/instagram/image (5).jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/img/instagram/image.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/img/instagram/image (3).jpg" alt="">
+
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/img/instagram/image (2).jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/img/instagram/image (3).jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/img/instagram/image (4).jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/img/instagram/image (5).jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/img/instagram/image.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/img/instagram/image (3).jpg" alt="">
+
+                    </div>
+
+
+
+                </div>
+                <!-- <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div> -->
+                <!-- <div class="swiper-pagination"></div> -->
+            </div>
+
+            <!-- Swiper JS -->
+        </div>
+    </section>
+
+    <!-- ==========================
+           INSTAGRAM SECTION START
+         =========================== -->
 
     <section class="footer-area">
         <div class="container">
@@ -942,6 +1005,10 @@
     <!-- Sticky -->
     <script defer type="text/javascript" src="./js/stick.js"></script>
     <!-- Sticky -->
+
+    <!-- Instagram -->
+    <script defer type="text/javascript" src="./js/instagram.js"></script>
+    <!-- Instagram -->
 
     <!-- Smooth scroll -->
     <!-- Smooth scroll -->
