--- a/service.html
+++ b/service.html
@@ -196,13 +196,13 @@
                                     <p>Lorem ipsum dolor sit amet</p>
                                     <p>Lorem ipsum dolor sit amet</p>
                                 </div>
-                                <a href="/service-detail-page1.html">View more</a>
+                                <a href="/service-detail-page.html">View more</a>
                             </figcaption>
 
                         </figure>
                         <h6>2D Animation</h6>
                         <div class="special-btn-box btn">
-                            <a href="/service-detail-page1.html">LEARN MORE</a>
+                            <a href="/service-detail-page.html">LEARN MORE</a>
 
                         </div>
                     </div>
