--- a/about.html
+++ b/about.html
@@ -203,6 +203,11 @@
                 </div>
             </div>
         </div>
+        <!-- Shape -->
+        <div class="shape">
+            <img src="/img/shapes/abt-shape-R.png" alt="shapes">
+        </div>
+        <!-- Shape -->
     </section>
 
     <!-- ==========================
@@ -270,7 +275,11 @@
                 </div>
             </div>
         </div>
-
+        <!-- Shape -->
+        <div class="shape">
+            <img src="/img/shapes/corner-left.png" alt="shapes">
+        </div>
+        <!-- Shape -->
     </section>
 
     <!-- ====================
@@ -286,86 +295,61 @@
         <div class="container">
             <h2>Meet The Creative Team</h2>
             <div class="row grid">
-                <div class="col-xl-4 col-lg-6 col-md-12 col-12">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-12">
                     <div class="content">
                         <figure class="effect-selena">
                             <img src="/img/about/team/gokul.jpg" alt="img10" />
-                            <figcaption>
-                                <div class="list">
-                                    <p>Creative Director</p>
-                                </div>
-                            </figcaption>
                         </figure>
                         <h6>Gokul Nandhan</h6>
                         <p>Creative Director</p>
                     </div>
 
                 </div>
-                <div class="col-xl-4 col-lg-6 col-md-12 col-12">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-12">
                     <div class="content">
                         <figure class="effect-selena">
                             <img src="/img/about/team/basil.jpg" alt="img10" />
-                            <figcaption>
-                                <div class="list">
-                                    <p>Generalist</p>
-                                </div>
-                            </figcaption>
+
                         </figure>
                         <h6>Basil</h6>
                         <p>Generalist</p>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-6 col-md-12 col-12">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-12">
                     <div class="content">
                         <figure class="effect-selena">
                             <img src="/img/about/team/iyas.jpg" alt="img10" />
-                            <figcaption>
-                                <div class="list">
-                                    <p>Senior Designe</p>
-                                </div>
-                            </figcaption>
+
                         </figure>
                         <h6>Iyas Ali</h6>
                         <p>Senior Designer</p>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-6 col-md-12 col-12">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-12">
                     <div class="content">
                         <figure class="effect-selena">
                             <img src="/img/about/team/anu.jpg" alt="img10" />
-                            <figcaption>
-                                <div class="list">
-                                    <p>Animator</p>
-                                </div>
-                            </figcaption>
+
                         </figure>
                         <h6>Anu</h6>
                         <p>Animator</p>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-6 col-md-12 col-12">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-12">
                     <div class="content">
                         <figure class="effect-selena">
                             <img src="/img/about/team/sreerag.jpg" alt="img10" />
-                            <figcaption>
-                                <div class="list">
-                                    <p>Video Editor</p>
-                                </div>
-                            </figcaption>
+
                         </figure>
                         <h6>Sreerag</h6>
                         <p>Video Editor</p>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-6 col-md-12 col-12">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-12">
                     <div class="content">
                         <figure class="effect-selena">
                             <img src="/img/about/team/hadi.jpg" alt="img10" />
-                            <figcaption>
-                                <div class="list">
-                                    <p>Graphic Designer</p>
-                                </div>
-                            </figcaption>
+
                         </figure>
                         <h6>Hadi</h6>
                         <p>Graphic Designer</p>
@@ -373,6 +357,11 @@
                 </div>
             </div>
         </div>
+        <!-- Shape -->
+        <div class="shape">
+            <img src="/img/shapes/abt-shape-R.png" alt="shapes">
+        </div>
+        <!-- Shape -->
     </section>
     <!-- =====================
         CREATIVE TEAM SECTION END -->
@@ -548,6 +537,11 @@
                 </div>
             </div>
         </div>
+        <!-- Shape -->
+        <div class="shape">
+            <img src="/img/shapes/about-left.png" alt="shapes">
+        </div>
+        <!-- Shape -->
     </section>
     <!-- ===================
      DIFFERENCE AREA END
