--- a/service.html
+++ b/service.html
@@ -62,6 +62,11 @@
                 </div>
             </div>
         </div>
+        <!-- Shape -->
+        <div class="shape">
+            <img src="/img/shapes/corner-left.png" alt="shapes">
+        </div>
+        <!-- Shape -->
     </section>
 
     <header class="header">
@@ -133,6 +138,16 @@
         HEADER SECTION END
      ========================== -->
 
+    <!-- ===============================
+            TITLE BANNER SECTION STRAT
+         =============================== -->
+    <section class="title-banner-area">
+        <h1> Our creativity begins where reality ends </h1>
+    </section>
+    <!-- =============================
+            TITLE BANNER SECTION END
+         ============================= -->
+
     <!-- ================
  SERVICE MAIN START
  ===================== -->
@@ -184,7 +199,7 @@
 
     <section class="service-provide-area">
         <div class="container">
-            <h2>Services We Provide</h2>
+            <h2> <span> Services We Provide </span> </h2>
             <div class="row grid">
                 <div class="col-xl-4 col-lg-6 col-md-12 col-12 ">
                     <div class="content">
@@ -387,7 +402,9 @@
         <div class="container">
             <div class="paragraph">
                 <div class="para-head">
-                    <h2>Do You Want to Create an Impact with a Professional & Effective Animated Video?</h2>
+                    <h2>Do You Want to <span> Create</span> an <span> Impact</span> with a Professional & Effective
+                        <span> Animated Video? </span>
+                    </h2>
                 </div>
                 <div class="para-content">
                     <p>Brand Bugs ensure the top-notch level video production services in Dubai with a perfect focus
